--- a/index.html
+++ b/index.html
@@ -2,9 +2,10 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Gallochapavalś favourite cocktails</title>
+    <title>Gallochapaval's favourite cocktails</title>
 </head>
 <body>
-    <h1>Odin Recipes</h1>    
+    <h1>Odin (Cocktail) Recipes</h1>
+    <a href="recipes/mojito.html">MOJITO</a>    
 </body>
 </html>
