Iteration 3: Recipe Page Content

--- a/recipes/mojito.html
+++ b/recipes/mojito.html
@@ -6,5 +6,27 @@
 </head>
 <body>
     <h1>MOJITO</h1>
+    <img href src="../images/MOJ.jpg">
+    <h3>DESCRIPTION</h3>
+    <p>This Mr.Gallochapaval's recipe for a classic mojito, with all the flavors of the Caribe</p>
+    <h4>INGREDIENTS</h4>
+    <ul>
+        <li>2oz - <em>Zacapa 12</em> Rum or <em>White Havana</em> Rum</li>
+        <li>1oz - Freshly squeezed lemon juice</li>
+        <li>1 - Lemon</li>
+        <li>2tbsp - Brown sugar</li>
+        <li>Club soda</li>
+        <li>Fresh mint</li>
+        <li>Ice</li>
+    </ul>
+    <h4>STEPS</h4>
+    <ol>
+        <li>Place the <em>Freshly squeezed lemon juice</em>, the <em>Brown sugar</em>, and the <em>Fresh mint</em> inside a <em>Highball glass.</em></li>
+        <li>Using a <em>Cocktail Muddler</em> firmly press on the mixture, twisting a little to mash the ingredients together. <em>(*NOTE: if you dont have a muddler, the back of a wooden spoon would do the job)</em></li>
+        <li>Add the Ice all the way to the top!</li>
+        <li>Add some Lemon Slices as well as some unmashed Mint Leaves as a garnish</li>
+        <li>Pour the 2oz of Rum...hopefully you chose the <em>Zacapa 12</em>!!!</li>
+        <li>Fill with the <em>Club Soda</em> and enjoy!</li>
+    </ol>
 </body>
 </html>
