Iteration 4: Add More Recipes

--- a/index.html
+++ b/index.html
@@ -6,6 +6,12 @@
 </head>
 <body>
     <h1>Odin (Cocktail) Recipes</h1>
-    <a href="recipes/mojito.html">MOJITO</a>    
+    <h2>Gallochapaval's (a.k.a. <em>"mr.CoQtails"</em>) favourite cocktails</h2>
+    <img src="images/mrcoq.jpg">
+    <ul>
+        <li><a href="recipes/mojito.html">Mojito</a></li>    
+        <li><a href="recipes/goldenboy.html">Goldenboy</a></li>
+        <li><a href="recipes/mandarino.html">Mandarino</a></li>
+    </ul>
 </body>
 </html>
