--- a/recipes/mojito.html
+++ b/recipes/mojito.html
@@ -28,5 +28,6 @@
         <li>Pour the 2oz of Rum...hopefully you chose the <em>Zacapa 12</em>!!!</li>
         <li>Fill with the <em>Club Soda</em> and enjoy!</li>
     </ol>
+    <h5><a href="../index.html">HOME</a></h5>
 </body>
 </html>
